--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,7 +1,26 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
 }
+
+.right-links {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 8px;
+} 
+
+.left-links {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 8px;
+} 
+
 
 .logo {
   font-size: 48px;
@@ -9,9 +28,14 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin:8px;
 }
 
 ul {
+  display: flex;
+  gap: 8px;
+  margin: 0px;
+  padding: 0px;
   /* this removes the dots on the list items*/
   list-style-type: none;
 }
