--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -1,10 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+
 body {
-  height: 100vh;
   margin: 0;
+  min-height: 100vh;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 img {
@@ -16,6 +20,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 12px;
 }
 
 input {
@@ -24,4 +29,39 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  gap: 16px;
+  padding: 2px;
+}
+
+a {
+  text-decoration: none;
+  color: #555;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding: 2px 16px 2px 16px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 2px 16px 2px 16px;
+  background: #eee;
+  margin-top: auto;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  flex-grow: 1;
 }
